# dourado-minguell-eml-mia-um-p1

./: README.md  main.ipynb  main.py  pyproject.toml
Entornos_Complejos/: Deep_Q_Learning.ipynb  MonteCarloTodasLasVisitas.ipynb  SARSA_Semi_Gradiente.ipynb  comparison_tabulars.ipynb  main.ipynb  monte_carlo_on_policy.ipynb  monte_carlo_policy_comparison.ipynb  pyproject.toml
Entornos_Complejos/.ipynb_checkpoints/: sarsa_experiment-checkpoint.ipynb
Entornos_Complejos/src/experiment/: __init__.py  deep_functions.py  monte_carlo_every_visit.py  q_learning.py  sarsa.py  sarsa_functions.py
Entornos_Complejos/src/plotting/: __init__.py  plotting.py
k_brazos/: bandit_experiment.ipynb  comparison_experiment.ipynb  epsilon_greedy_bernoulli_dist_experiment.ipynb  epsilon_greedy_binomial_dist_experiment.ipynb  epsilon_greedy_normal_dist_experiment.ipynb  main.ipynb  normDist_experiment.ipynb  softmax_bernoulli_dist_experiment.ipynb  softmax_binomial_dist_experiment.ipynb  softmax_normal_dist_experiment.ipynb  ucb1_bernoulli_dist_experiment.ipynb  ucb1_binomial_dist_experiment.ipynb  ucb1_normal_dist_experiment.ipynb
k_brazos/.ipynb_checkpoints/: all-checkpoint.ipynb  bernoulli_dist_experiment-checkpoint.ipynb  binomial_dist_experiment-Copy1-checkpoint.ipynb  epsilon_greedy_bernoulli_dist_experiment-checkpoint.ipynb  epsilon_greedy_binomial_dist_experiment-checkpoint.ipynb  epsilon_greedy_normal_dist_experiment-checkpoint.ipynb  main-checkpoint.ipynb  ucb1_bernoulli_dist_experiment-checkpoint.ipynb  ucb1_normal_dist_experiment-checkpoint.ipynb
(+23 files in other folders)
