[project]
name = "dourado-minguell-eml-mia-um-p1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.12"
dependencies = [
    "gymnasium[toy-text]>=1.3.0",
    "imageio>=2.37.3",
    "jupyter>=1.1.1",
    "numpy>=2.4.5",
    "seaborn>=0.13.2",
    "torch>=2.12.1",
    "tqdm>=4.68.2",
]
